Fixed spacing issue

--- a/style.css
+++ b/style.css
@@ -28,4 +28,5 @@ body
 .computers{
     display:flex;
     justify-content:flex-start;
+    gap:50px;
 }
